待开发遗物

--- a/src/main/resources/basicmod/localization/zhs/RelicStrings.json
+++ b/src/main/resources/basicmod/localization/zhs/RelicStrings.json
@@ -1,5 +1,5 @@
 {
-  "${modID}:RelicID": {
+  "${modID}:MyRelic": {
     "NAME": "Good Relic",
     "FLAVOR": "Flavor text displayed in detailed relic view.",
     "DESCRIPTIONS": [
