1、优化以牙还牙：只支持几种负面影响，防止其他mod的定义负面影响导致怪物不可用 2、九阳真经去除无用的增益 3、修复降龙十八掌执行多次以及没有消耗的bug

--- a/src/main/resources/basicmod/localization/zhs/basicmod-CardStrings.json
+++ b/src/main/resources/basicmod/localization/zhs/basicmod-CardStrings.json
@@ -91,6 +91,6 @@
   },
   "${modID}:NineYangsScripture": {
     "NAME": "九阳真经",
-    "DESCRIPTION": "随机获取9层 !M! 个增益（力量、下回合格挡、多重护甲、敏捷、活力、格挡返还、人工制品、缓冲、保留、双倍伤害、免费攻击）。 NL 消耗 。"
+    "DESCRIPTION": "随机获取9层 !M! 个增益（力量、下回合格挡、多重护甲、敏捷、活力、人工制品、缓冲、保留、双倍伤害、免费攻击）。 NL 消耗 。"
   }
 }
