--- a/src/main/resources/basicmod/localization/zhs/basicmod-CardStrings.json
+++ b/src/main/resources/basicmod/localization/zhs/basicmod-CardStrings.json
@@ -11,7 +11,7 @@
   },
   "${modID}:EighteenDragonSubduingPalm3": {
     "NAME": "见龙在田",
-    "DESCRIPTION": "降龙十八掌第三式。对敌人造成 !D! 点伤害，将一张 鸿渐于陆 加入弃牌堆。 ",
+    "DESCRIPTION": "降龙十八掌第三式。对敌人造成 !D! 点伤害，将一张 鸿渐于陆 加入弃牌堆。 NL 消耗 。 ",
     "UPGRADE_DESCRIPTION": "降龙十八掌第三式。对敌人造成 !D! 点伤害，将一张 鸿渐于陆+ 加入弃牌堆。 NL 并执行上一掌。 NL 消耗 。"
   },
   "${modID}:EighteenDragonSubduingPalm4": {
