--- a/src/main/resources/basicmod/localization/zhs/basicmod-CardStrings.json
+++ b/src/main/resources/basicmod/localization/zhs/basicmod-CardStrings.json
@@ -91,6 +91,14 @@
   },
   "${modID}:NineYangsScripture": {
     "NAME": "九阳真经",
-    "DESCRIPTION": "随机获取9层 !M! 个增益（力量、下回合格挡、多重护甲、敏捷、活力、人工制品、缓冲、保留、双倍伤害、免费攻击）。 NL 消耗 。"
+    "DESCRIPTION": "随机获取9层 !M! 个增益（ 力量 、 下回合格挡 、 多重护甲 、 敏捷 、 活力 、 人工制品 、 缓冲 、 保留 、 双倍伤害 、 免费攻击 ）。 NL 消耗 。"
+  },
+  "${modID}:BiQiMiJue": {
+    "NAME": "闭气秘诀",
+    "DESCRIPTION": "省流：获得 !M! 层 jywx:运气 ，获得 1 层 缓冲 。道家内功，运用此法即可长时间不呼吸。刀枪不入，在运功时会有热气发出。"
+  },
+  "${modID}:ShouJinSuoGuFa": {
+    "NAME": "收筋缩骨法",
+    "DESCRIPTION": "省流：消耗2点 jywx:真气 ，获得 !M! x3层 jywx:缩骨 ，如果 jywx:真气 不足，获得 !M! 层 jywx:缩骨。练至精深处可将身子缩成极小一团，可快速地撞开多名的敌人脱困"
   }
 }
