--- a/src/main/resources/basicmod/localization/zhs/basicmod-Keywords.json
+++ b/src/main/resources/basicmod/localization/zhs/basicmod-Keywords.json
@@ -19,5 +19,12 @@
       "缩骨"
     ],
     "DESCRIPTION": "当受到 #y攻击 伤害时，缩骨并获得相同点 #y格挡 。减少1层。"
+  },
+  {
+    "PROPER_NAME": "失魂",
+    "NAMES": [
+      "失魂"
+    ],
+    "DESCRIPTION": "受失魂影响的人，自己攻击时将随机攻击自己的敌人（包括自己）。"
   }
 ]
