--- a/lottery/src/main/resources/LotteryMod/localization/zhs/LotteryMod-RelicStrings.json
+++ b/lottery/src/main/resources/LotteryMod/localization/zhs/LotteryMod-RelicStrings.json
@@ -10,7 +10,14 @@
     "NAME": "三连",
     "FLAVOR": "描述1",
     "DESCRIPTIONS": [
-      "描述"
+      "手牌上限+${handSize}。战斗开始时随机打开${openSize}抽卡包每有三张相同的卡（包含等级），合成一张升级牌(已经升级不在升级)和一张对应稀有度的 lottery:三连奖励 。"
+    ]
+  },
+  "${modID}:SanLianLucky": {
+    "NAME": "三连好运器",
+    "FLAVOR": "描述1",
+    "DESCRIPTIONS": [
+      "每抽奖${max}次，获得一张随机稀有度 lottery:三连奖励 。"
     ]
   }
 }
