--- a/lottery/src/main/resources/LotteryMod/localization/zhs/LotteryMod-UIStrings.json
+++ b/lottery/src/main/resources/LotteryMod/localization/zhs/LotteryMod-UIStrings.json
@@ -1,4 +1,14 @@
 {
+  "${modID}:Blessings": {
+    "TEXT": [
+      "三……连 ❸连！合成就能得到①个临时的遗物！φ(>ω<*) ",
+      "三连不错吧！再给您一个三连好运器器。祝您好运 NL (^.^)Y Ya!!"
+    ],
+    "EXTRA_TEXT": [
+      "获取一个三连遗物。",
+      "拒绝！"
+    ]
+  },
   "${modID}:Example": {
     "TEXT": [
       "This is",
