自动补充 消耗 虚无文本

--- a/lottery/src/main/resources/LotteryMod/localization/zhs/LotteryMod-CharacterStrings.json
+++ b/lottery/src/main/resources/LotteryMod/localization/zhs/LotteryMod-CharacterStrings.json
@@ -1,4 +1,12 @@
 {
+    "${modID}:BaseLuShiPlayer": {
+      "NAMES": [
+        "基础炉石玩家"
+      ],
+      "TEXT": [
+        "炉石战旗"
+      ]
+    },
   "${modID}:CharacterID": {
     "NAMES": [
       "The Name (Displayed in character select)",
